// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components - Login Snapshots renders mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "2em",
        "marginTop": "1em",
      }
    }
  >
    Welcome
  </h1>
  <h3
    className="ui header"
  >
    Please sign in with Spotify to start.
  </h3>
</div>
`;

exports[`App Components - Login Snapshots renders no mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "4em",
        "marginTop": "1.5em",
      }
    }
  >
    Welcome
  </h1>
  <h2
    className="ui header"
  >
    Please sign in with Spotify to start.
  </h2>
</div>
`;
